// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`server-tool-index should have all tools when user is admin 1`] = `
[
  "get-server-status",
  "get-server-configuration",
  "get-server-information",
  "get-server-troubleshooting",
  "get-server-upgrade-check",
]
`;

exports[`server-tool-index should have basic tools when user is not admin 1`] = `
[
  "get-server-status",
  "get-server-configuration",
  "get-server-information",
  "get-server-troubleshooting",
]
`;
